<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_inverse"
    tools:context=".FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mode_inverse">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/feedback_animationView"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:lottie_fileName="smile_rating.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_form"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_22sdp"
        android:fontFamily="@font/acme"
        android:textStyle="bold"
        android:textColor="@color/mode"
        android:layout_marginTop="-15dp"
        android:layout_below="@+id/feedback_animationView"
        />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/extra_background"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:elevation="5dp"
            android:layout_below="@+id/textView_feedback">

        <com.hadi.emojiratingbar.EmojiRatingBar
            android:id="@+id/emoji_rating_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            app:showText="true"
            app:showAllText="true"
            app:titleColor="#844848"
            android:layout_toEndOf="@+id/textView_rate"
            android:layout_below="@+id/textView_feedback"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_rate_this_app_it_is_compulsory_while_giving_feedback"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/acme"
            android:layout_below="@+id/card1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_email_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/description_optional"
            app:hintAnimationEnabled="true"
            app:endIconTint="@color/mode"
            app:endIconMode="clear_text"
            android:layout_below="@+id/textView_rate"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_feedback_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:maxLines="6"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/feedback_image_card"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_below="@+id/textview_email_signup"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/feedback_image"
                android:src="@drawable/add_photo"
                android:background="@color/extra_background"
                android:scaleType="fitCenter"/>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView_image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_screenshot_optional"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/acme"
            android:layout_below="@+id/feedback_image_card"
            />

        <TextView
            android:id="@+id/textView_system_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_system_info_and_log_data_will_be_sent_to_agrigroww"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/acme"
            android:textColor="@color/orange_color"
            android:layout_below="@+id/textView_image_info"
            />

        <CheckBox
            android:id="@+id/checkbox_get_copy_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_a_copy_of_feedback_to_my_email"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@+id/textView_system_info"
            android:layout_centerHorizontal="true"
            android:buttonTint="@color/main_color"
            />

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_get_copy_feedback">

        <Button
            android:id="@+id/button_submit_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:theme="@style/CircularProgress"
            />
    </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_back_button"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            >

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@color/extra_background"
                app:tint="@color/mode"
                android:layout_toEndOf="@+id/textview_scroll_animation"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>